Fix: adjust blog_grid_tab padding-top for better spacing

--- a/assets/css/style-main.css
+++ b/assets/css/style-main.css
@@ -15662,7 +15662,7 @@ body.category .doc_blog_grid_area {
 }
 
 .blog_grid_tab {
-  padding-top: 0px;
+  padding-top: 38px;
   margin-bottom: -40px;
 }
 
